committing with working joins for all employee table

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "chalk": "^4.1.0",
+    "colors": "^1.4.0",
     "console.table": "^0.10.0",
     "custom-env": "^2.0.1",
     "inquirer": "^8.0.0",
